# Pixel

./: .gitignore  .gitmodules  CMakeLists.txt  Pixel.sln  README.md  premake5.lua  pxpch.h
MetaParser/: CMakeLists.txt  PreCompiled.cpp  PreCompiled.h  main.cpp
MetaParser/Header/: Class.h  Constructor.h  ConstructorTokenSymbols.inl  Cursor.h  CursorType.h  Enum.h  Field.h  Invokable.h  LanguageType.h  MetaDataConfig.h  MetaDataManager.h  MetaUtils.h  Method.h  ModuleFile.h  Namespace.h  ReflectionOptions.h  ReflectionParser.h  Templates.h  Token.h  Token.hpp  TokenType.h  Tokenizer.h  Tokenizer.hpp  TokenizerResult.h  TokenizerResult.hpp  TokenizerState.h  TokenizerState.hpp
MetaParser/Resources/Templates/: module-file-header.mustache  module-file-source.mustache  module-source.mustache
MetaParser/Source/: Class.cpp  Constructor.cpp  Cursor.cpp  CursorType.cpp  Enum.cpp  Field.cpp  Invokable.cpp  LanguageType.cpp  MetaDataManager.cpp  MetaUtils.cpp  Method.cpp  ModuleFile.cpp  ReflectionOptions.cpp  ReflectionParser.cpp
Pixel/: CMakeLists.txt  Camera.h  Pixel.vcxproj  Pixel.vcxproj.filters
Pixel-Editor/: CMakeLists.txt
Pixel-Editor/src/: EditorLayer.cpp  EditorLayer.h  PixelEditorApp.cpp
Pixel/src/: Pixel.h  pxpch.cpp  pxpch.h
Pixel/src/Pixel/: Application.cpp  Application.h  ConstantBuffers.h  Core.h  EntryPoint.h  Input.h  KeyCodes.h  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  OrthographicCameraController.cpp  OrthographicCameraController.h  Window.h
Pixel/src/Pixel/Animation/: Animation.cpp  Animation.h  Animator.cpp  Animator.h  Bone.cpp  Bone.h  BoneInfo.cpp  BoneInfo.h  Skeleton.cpp  Skeleton.h
Pixel/src/Pixel/Asset/: AssetManager.cpp  AssetManager.h  YAMLStream.cpp  YAMLStream.h
Pixel/src/Pixel/Core/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseButtonCodes.h  Reflect.cpp  Reflect.h  Singleton.cpp  Singleton.h  Stream.cpp  Stream.h  Timestep.h  UUID.cpp  UUID.h  Window.h
Pixel/src/Pixel/Debug/: Instrumentor.h
Pixel/src/Pixel/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Pixel/src/Pixel/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
Pixel/src/Pixel/Math/: Math.cpp  Math.h
Pixel/src/Pixel/Physics/: PhysicsDraw.cpp  PhysicsDraw.h
Pixel/src/Pixel/Reflection/: Reflection.h  ReflectionModule.h  ThirdPartyRegister.cpp  ThirdPartyRegister.h
Pixel/src/Pixel/Renderer/: BaseRenderer.cpp  BaseRenderer.h  Buffer.cpp  Buffer.h  Camera.h  Context.cpp  Context.h  DescriptorCpuHandle.cpp  DescriptorGpuHandle.cpp  DescriptorGpuHandle.h  DescriptorHandle.cpp  DescriptorHandle.h  DirectXRenderer.cpp  DirectXRenderer.h  EditorCamera.cpp  EditorCamera.h  Framebuffer.cpp  Framebuffer.h  GpuBuffer.cpp  GpuResource.cpp  GpuResource.h  GpuVirtualAddress.cpp  GpuVirtualAddress.h  GraphicsContext.h  IndexBufferView.cpp  IndexBufferView.h  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h  PixelBuffer.cpp  PixelBuffer.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  (+18 more)
Pixel/src/Pixel/Scene/: Components.cpp  (+17 more)
PixelEditor/: BasicInteraction.json  BinMat2.json  BinMat3.json  CMakeLists.txt  NodeGraph.json  PixelProfile-Runtime.json  binMat.json  imgui.ini
PixelEditor/Resources/Icons/: PauseButton.dds  PlayButton.dds
PixelEditor/assets/: GraphNodeEditorTest.json  materia.json  material.json
PixelEditor/assets/AssetRegistry/: AssetRegistry.json
PixelEditor/assets/icons/: file.dds
PixelEditor/assets/materials/: BinMat2.tmat  BinMat3.imat  BinMat3.tmat  BinMat4.imat  BinMat4.tmat  BinMat5.imat  BinMat5.tmat  BinMat6.imat  BinMat6.tmat  BinMat7.imat  BinMat7.tmat  Body.imat  Body.tmat  Cube.mat  Cute.mat  Kirby.tmat  Kirby_Feet.imat  MonoBike1.mat  Mouth.imat  Mouth.tmat  Ornament.imat  Ornament_Lion.imat  Roof_Floor.imat  Sphere.mat  Sphere2.mat  Sponza.mat  Sponza.tmat  Teeth.imat  Teeth.tmat  Test.mut  binMat.tmat  ctmat.tmat  floor.mat  tmat.tmat  tmat4.tmat  tmat6.tmat  x.mat  x2.mat
PixelEditor/assets/models/: BasketBall.gltf  Bleach.fbx  Bleach.mtl  Cup.gltf  Test.fbx  Vintage_Suitcase_LP.fbx  WorkBox.fbx  frame3.fbx  model.dae  plane.fbx  scene.gltf
PixelEditor/assets/scenes/: Fish.pixel  Fishes.pixel  Physical.pixel  Physics.pixel  Sphere.pixel  Test  Test.json  Test.pixel  Test2.pixel  Test3.pixel  Test4.pixel  Test5.pixel  Test6.pixel  a.pixel  b.pixel  jjj.pixel  sponza.pixel  test.pixel  x.pixel
PixelEditor/assets/scripts/: Test.lua  Test2.lua  Test3.lua
PixelEditor/assets/shaders/: AdditiveBlending.hlsl  CameraFrustum.hlsl  Common.glsl  ImageToBackBuffer.hlsl  ShadowMap.hlsl  Test.spriv  Texture.glsl  VertBlur.hlsl
PixelEditor/assets/textures/: Material_Albedo.dds
PixelEditor/src/: EditorLayer.cpp  EditorLayer.h  PixelEditorApp.cpp
PixelEditor/src/GraphNode/: Builder.cpp  Builder.h  GraphLink.cpp  GraphLink.h  GraphNode.cpp  GraphNode.h  GraphNodeEditor.cpp  GraphNodeEditor.h  GraphPin.cpp  GraphPin.h  MaterialInstanceEditor.cpp  MaterialInstanceEditor.h
PixelEditor/src/NodeGraph/: Node.cpp  Node.h  NodeGraph.cpp  NodeGraph.h
PixelEditor/src/Panels/: ContentBrowserPanel.cpp  ContentBrowserPanel.h  EnvironmentPanel.cpp  EnvironmentPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h
PixelGame/: CMakeLists.txt  PixelGame.vcxproj  PixelGame.vcxproj.filters  main.cpp
PixelGame/Resources/Icons/: Camera.fbx
PixelGame/assets/icons/: directory.dds
PixelGame/assets/models/: frame.fbx  frame2.fbx  license.txt
PixelGame/assets/scenes/: Test.pixel  Test2.pixel  Test3.pixel
PixelGame/assets/scripts/: Test.lua
PixelGame/assets/shaders/: AdditiveBlending.hlsl  Blur.hlsl  Common.glsl  postprocessor.glsl
PixelGame/src/: App.cpp  GameLayer.cpp  GameLayer.h
SandBox/: CMakeLists.txt  SandBox.vcxproj  SandBox.vcxproj.filters  imgui.ini
SandBox/assets/shaders/: Texture.glsl
SandBox/src/: ExampleLayer.cpp  ExampleLayer.h  SandBox.cpp  Sandbox2D.cpp  Sandbox2D.h
(+503 files in other folders)
